codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup_model_migration__tests__model_migration_view_renders_native_choices.snap
---
source: tui/src/app_shell/startup_model_migration_tests.rs
expression: terminal.backend().to_string()
---
"                                                                                                    "
" Better Codex                                                          Startup                      "
"                                                                                                    "
"                                                                       current model                "
" Model migration                                                       gpt-5.1-codex-max            "
"                                                                                                    "
" Better Codex just got an upgrade. Introducing GPT-5.2 Codex Max.      recommended model            "
"                                                                       gpt-5.2-codex-max            "
" We recommend switching from gpt-5.1-codex-max to gpt-5.2-codex-max.                                "
"                                                                       display name                 "
" The newer Codex model is recommended.                                 GPT-5.2 Codex Max            "
"                                                                                                    "
" You can continue using gpt-5.1-codex-max if you prefer.               selected Try new model       "
"                                                                                                    "
" > 1. Try new model                                                                                 "
"   Update config and start this session with the recommended model.                                 "
"   2. Keep current model                                                                            "
"   Acknowledge the migration and keep the current model for this                                    "
"   workspace.                                                                                       "
"   3. Exit                                                                                          "
"   Return to the terminal without starting a thread.                                                "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
" Enter continue  Up/Down choose  1/2/3 jump  Esc exit                                               "
" The decision is saved through app-server config.                                                   "
"                                                                                                    "
