codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup_model_migration__tests__model_migration_view_uses_tokyo_night_styles.snap
---
source: tui/src/app_shell/startup_model_migration_tests.rs
expression: "model_migration_style_grid(TuiAppTheme::TokyoNight)"
---
style grid 100x28:
0000000000000000000000000000000000000000000000000000000000000000000000111111111111111111111111111111
0222222222222000000000000000000000000000000000000000000000000000000000133333331111111111111111111111
0000000000000000000000000000000000000000000000000000000000000000000000111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444155555555555551111111111111111
4666666666666666444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4666666666666666666666666666666666666666666666666666666666666666644444155555555555555555111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444155555555555511111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444155555555577777777777771111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4894444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4999999999999999999999999999999999999999999999999999999999999999999444111111111111111111111111111111
4994444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4999999999999999999999999999999999999999999999999999999999999999444444111111111111111111111111111111
4999999999999444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4994444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4999999999999999999999999999999999999999999999999999444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111
1555555555555555555555555555555555555555555555555555511111111111111111111111111111111111111111111111
1555555555555555555555555555555555555555555555555111111111111111111111111111111111111111111111111111
1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111
legend:
0 (198 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
1 (949 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
2 (12 cells): Style::new().fg(Color::Rgb(187, 154, 247)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
3 (7 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset).bold()
4 (1193 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
5 (151 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset).dim()
6 (79 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
7 (13 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset).bold()
8 (1 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
9 (197 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).dim()
